save recomendations as dict in pickle

--- a/notebooks/new_reviews_scoring.ipynb
+++ b/notebooks/new_reviews_scoring.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        " 'google/rostics_2024-03-26.parquet']"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2744,7 +2744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2765,6 +2765,7 @@
     "            .reshape(-1)\n",
     "        )\n",
     "    )\n",
+    "    .loc[:,['date', 'review', 'rating', 'review_processed', 'preds', 'type_preds']]\n",
     ")\n",
     "\n",
     "predicted_reviews_unlabeled_burger_king.to_csv('../data/scored/burger_king.csv')"
