--- a/notebooks/gpt_analysis.ipynb
+++ b/notebooks/gpt_analysis.ipynb
@@ -6,10 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from creds import (\n",
-    "    FOLDER_ID,\n",
-    "    OAUTH_TOKEN\n",
-    ")\n",
+    "from creds import FOLDER_ID, OAUTH_TOKEN\n",
     "\n",
     "import requests\n",
     "import json\n",
@@ -39,12 +36,13 @@
     }
    ],
    "source": [
-    "request = requests.post(\"https://iam.api.cloud.yandex.net/iam/v1/tokens\", \n",
-    "              json={\"yandexPassportOauthToken\" : OAUTH_TOKEN}, \n",
-    "              )\n",
+    "request = requests.post(\n",
+    "    \"https://iam.api.cloud.yandex.net/iam/v1/tokens\",\n",
+    "    json={\"yandexPassportOauthToken\": OAUTH_TOKEN},\n",
+    ")\n",
     "\n",
-    "IAM_TOKEN = request.json()['iamToken']\n",
-    "expiration_str = request.json()['expiresAt']\n",
+    "IAM_TOKEN = request.json()[\"iamToken\"]\n",
+    "expiration_str = request.json()[\"expiresAt\"]\n",
     "print(\"Token expires at\", expiration_str[:10], expiration_str[11:16])"
    ]
   },
@@ -85,13 +83,10 @@
    "outputs": [],
    "source": [
     "json_data_new = {\n",
-    "\"model\": \"general\",\n",
-    "\"instruction_text\": instruction_text,\n",
-    "\"request_text\": request_text,\n",
-    "\"generation_options\": {\n",
-    "                \"max_tokens\": 1500,  \n",
-    "                \"temperature\": 0.6\n",
-    "                }\n",
+    "    \"model\": \"general\",\n",
+    "    \"instruction_text\": instruction_text,\n",
+    "    \"request_text\": request_text,\n",
+    "    \"generation_options\": {\"max_tokens\": 1500, \"temperature\": 0.6},\n",
     "}"
    ]
   },
@@ -101,10 +96,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_file = '../data/prompt.json'\n",
+    "json_file = \"../data/prompt.json\"\n",
     "\n",
     "with open(json_file, \"w\") as fp:\n",
-    "    json.dump(json_data_new , fp)\n",
+    "    json.dump(json_data_new, fp)\n",
     "\n",
     "with open(json_file) as json_data:\n",
     "    prompt_date = json.dumps(json.load(json_data))"
@@ -117,7 +112,7 @@
    "outputs": [],
    "source": [
     "response = requests.post(\n",
-    "    \"https://llm.api.cloud.yandex.net/llm/v1alpha/instruct\", \n",
+    "    \"https://llm.api.cloud.yandex.net/llm/v1alpha/instruct\",\n",
     "    data=prompt_date,\n",
     "    headers={\n",
     "        \"Content-Type\": \"application/json\",\n",
@@ -150,7 +145,7 @@
     }
    ],
    "source": [
-    "print(response.json()['result']['alternatives'][0]['text'])\n"
+    "print(response.json()[\"result\"][\"alternatives\"][0][\"text\"])"
    ]
   },
   {
@@ -166,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub_df = pd.read_csv('../data/scored/rostics.csv')"
+    "sub_df = pd.read_csv(\"../data/scored/rostics.csv\")"
    ]
   },
   {
@@ -256,7 +251,9 @@
     }
    ],
    "source": [
-    "print(';\\n'.join(sub_df[sub_df['type_preds'] == test_categories[0]]['review'].values[:1]))"
+    "print(\n",
+    "    \";\\n\".join(sub_df[sub_df[\"type_preds\"] == test_categories[0]][\"review\"].values[:1])\n",
+    ")"
    ]
   },
   {
@@ -333,12 +330,9 @@
     }
    ],
    "source": [
-    "sub_df.loc[\n",
-    "    (sub_df.type_preds!='Неинформативно')\n",
-    "    ,\n",
-    "    ['type_preds', 'rating']\n",
-    "    ].groupby('type_preds').count().sort_values('rating')\n",
-    "\n"
+    "sub_df.loc[(sub_df.type_preds != \"Неинформативно\"), [\"type_preds\", \"rating\"]].groupby(\n",
+    "    \"type_preds\"\n",
+    ").count().sort_values(\"rating\")"
    ]
   },
   {
@@ -347,7 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/scored/recommendations.pickle', 'rb') as f:\n",
+    "with open(\"../data/scored/recommendations.pickle\", \"rb\") as f:\n",
     "    recommendations = pickle.load(f)"
    ]
   },
@@ -468,39 +462,37 @@
     "    \"burger_king\",\n",
     "    # \"vit\",\n",
     "    # \"dodo\",\n",
-    "\n",
     "]:\n",
     "    # upload reviews\n",
-    "    sub_df = pd.read_csv(f'../data/scored/{business}.csv')\n",
+    "    sub_df = pd.read_csv(f\"../data/scored/{business}.csv\")\n",
     "\n",
     "    # find categories of reviews\n",
-    "    test_categories = list(set(sub_df.type_preds.unique().tolist()) - set(['Неинформативно']))\n",
+    "    test_categories = list(\n",
+    "        set(sub_df.type_preds.unique().tolist()) - set([\"Неинформативно\"])\n",
+    "    )\n",
     "\n",
     "    recommendations[business] = dict()\n",
     "\n",
     "    # for each category of reviews get recommendations\n",
     "    for test_category in test_categories:\n",
-    "        reviews = sub_df[sub_df['type_preds'] == test_category]['review'].values\n",
+    "        reviews = sub_df[sub_df[\"type_preds\"] == test_category][\"review\"].values\n",
     "\n",
-    "        # if there are few reviews in this category \n",
+    "        # if there are few reviews in this category\n",
     "        # we will not extract good recomendations\n",
     "        if len(reviews) > 2:\n",
-    "            request_text = ';\\n'.join(reviews[:25]) # 45 отзывов максимум\n",
+    "            request_text = \";\\n\".join(reviews[:25])  # 45 отзывов максимум\n",
     "\n",
     "            json_data_new = {\n",
     "                \"model\": \"general\",\n",
     "                \"instruction_text\": instruction_text,\n",
     "                \"request_text\": request_text,\n",
-    "                \"generation_options\": {\n",
-    "                \"max_tokens\": 1500,  \n",
-    "                \"temperature\": 0.6\n",
-    "                }\n",
+    "                \"generation_options\": {\"max_tokens\": 1500, \"temperature\": 0.6},\n",
     "            }\n",
     "\n",
     "            # get request in correct format\n",
-    "            json_file = '../data/prompt.json'\n",
+    "            json_file = \"../data/prompt.json\"\n",
     "            with open(json_file, \"w\") as fp:\n",
-    "                json.dump(json_data_new , fp)\n",
+    "                json.dump(json_data_new, fp)\n",
     "\n",
     "            with open(json_file) as json_data:\n",
     "                prompt_date = json.dumps(json.load(json_data))\n",
@@ -508,7 +500,7 @@
     "            # ------------------------------------\n",
     "\n",
     "            response = requests.post(\n",
-    "                \"https://llm.api.cloud.yandex.net/llm/v1alpha/instruct\", \n",
+    "                \"https://llm.api.cloud.yandex.net/llm/v1alpha/instruct\",\n",
     "                data=prompt_date,\n",
     "                headers={\n",
     "                    \"Content-Type\": \"application/json\",\n",
@@ -517,12 +509,14 @@
     "                },\n",
     "            )\n",
     "\n",
-    "            print(f'Категория: {test_category}')\n",
-    "            print(response.json()['result']['alternatives'][0]['text'])\n",
-    "            print('-'*10)\n",
+    "            print(f\"Категория: {test_category}\")\n",
+    "            print(response.json()[\"result\"][\"alternatives\"][0][\"text\"])\n",
+    "            print(\"-\" * 10)\n",
     "            print()\n",
     "            time.sleep(5)\n",
-    "            recommendations[business][test_category] = response.json()['result']['alternatives'][0]['text']\n",
+    "            recommendations[business][test_category] = response.json()[\"result\"][\n",
+    "                \"alternatives\"\n",
+    "            ][0][\"text\"]\n",
     "\n",
     "\n",
     "# повторный заказ\n",
@@ -538,7 +532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/scored/recommendations.pickle', 'wb') as f:\n",
+    "with open(\"../data/scored/recommendations.pickle\", \"wb\") as f:\n",
     "    pickle.dump(recommendations, f)"
    ]
   },
