--- a/notebooks/scrapper.ipynb
+++ b/notebooks/scrapper.ipynb
@@ -39,7 +39,7 @@
     "    AWS_SECRET_ACCESS_KEY,\n",
     "    AWS_SECRET_KEY_ID,\n",
     "    S3_BUCKET_RESULT,\n",
-    "    S3_ENDPOINT_URL\n",
+    "    S3_ENDPOINT_URL,\n",
     ")\n",
     "\n",
     "# nltk.download(\"stopwords\", download_dir='../data')\n",
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/corpora/stopwords/russian', 'r') as file:\n",
+    "with open(\"../data/corpora/stopwords/russian\", \"r\") as file:\n",
     "    stopwords = [line.rstrip() for line in file]"
    ]
   },
@@ -81,28 +81,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse_apple_data(app_name=\"Вкусно — и точка\", app_id=896111038, how_many=3, \n",
-    "                     sleep=2, after=datetime.today() - timedelta(days=31)) -> pd.DataFrame:\n",
+    "def parse_apple_data(\n",
+    "    app_name=\"Вкусно — и точка\",\n",
+    "    app_id=896111038,\n",
+    "    how_many=3,\n",
+    "    sleep=2,\n",
+    "    after=datetime.today() - timedelta(days=31),\n",
+    ") -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    parse and save apple reviews\n",
     "    \"\"\"\n",
-    "    revs = AppStore(country=\"ru\", app_name=app_name.encode('utf-8'), app_id=app_id)\n",
+    "    revs = AppStore(country=\"ru\", app_name=app_name.encode(\"utf-8\"), app_id=app_id)\n",
     "    revs.review(how_many=how_many, sleep=sleep, after=after)\n",
     "    pprint(revs.reviews_count)\n",
     "    # save data\n",
     "    df_revs = pd.DataFrame(revs.reviews)\n",
-    "    file_name = str(app_id) + '_' + after.strftime('%Y-%m-%d') + '.csv'\n",
+    "    file_name = str(app_id) + \"_\" + after.strftime(\"%Y-%m-%d\") + \".csv\"\n",
     "    # df_revs.to_csv('data/apple/' + file_name, index=None)\n",
     "    return df_revs\n",
-    "    \n",
+    "\n",
+    "\n",
     "def preproc_apple(_df):\n",
     "    \"\"\"\n",
     "    drop and rename columns\n",
     "    \"\"\"\n",
-    "    cols_to_drop = ['userName']\n",
+    "    cols_to_drop = [\"userName\"]\n",
     "    _df = _df.drop(columns=cols_to_drop)\n",
-    "    _df = _df.rename(columns={'date':'rev_date', 'review': 'rev_text', 'title' : 'rev_title'})\n",
-    "    _df.rev_date = _df.rev_date.astype('datetime64[ns]')\n",
+    "    _df = _df.rename(\n",
+    "        columns={\"date\": \"rev_date\", \"review\": \"rev_text\", \"title\": \"rev_title\"}\n",
+    "    )\n",
+    "    _df.rev_date = _df.rev_date.astype(\"datetime64[ns]\")\n",
     "    return _df"
    ]
   },
@@ -189,17 +197,18 @@
     }
    ],
    "source": [
-    "#app_name, app_id =\"Вкусно — и точка\", 896111038\n",
-    "#app_name, app_id =\"БУРГЕР КИНГ - акции, доставка\", 1257821028\n",
-    "#app_name, app_id =\"KFC: Доставка еды, купоны\", 1074266177\n",
-    "app_name, app_id =\"Додо Пицца: доставка, ресторан\", 894649641\n",
+    "# app_name, app_id =\"Вкусно — и точка\", 896111038\n",
+    "# app_name, app_id =\"БУРГЕР КИНГ - акции, доставка\", 1257821028\n",
+    "# app_name, app_id =\"KFC: Доставка еды, купоны\", 1074266177\n",
+    "app_name, app_id = \"Додо Пицца: доставка, ресторан\", 894649641\n",
     "\n",
-    "apple_reviews = parse_apple_data(app_name=app_name, \n",
-    "                 app_id=app_id, \n",
-    "                 how_many=1, \n",
-    "                 sleep=6, \n",
-    "                 after=(datetime.today() - timedelta(days=31))\n",
-    "                 )\n",
+    "apple_reviews = parse_apple_data(\n",
+    "    app_name=app_name,\n",
+    "    app_id=app_id,\n",
+    "    how_many=1,\n",
+    "    sleep=6,\n",
+    "    after=(datetime.today() - timedelta(days=31)),\n",
+    ")\n",
     "apple_reviews"
    ]
   },
@@ -216,16 +225,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "result, continuation_token = google_play_scraper.reviews(\n",
-    "    'com.apegroup.mcdonaldsrussia',\n",
+    "    \"com.apegroup.mcdonaldsrussia\",\n",
     "    # sleep_milliseconds=40,\n",
-    "    lang='ru', # defaults to 'en'\n",
-    "    country='ru', # defaults to 'us'\n",
+    "    lang=\"ru\",  # defaults to 'en'\n",
+    "    country=\"ru\",  # defaults to 'us'\n",
     "    # sort='Sort.NEWEST', # defaults to Sort.NEWEST\n",
-    "    count=100, # defaults to 100\n",
-    "    filter_score_with=2 # defaults to None(means all score)\n",
-    ")\n"
+    "    count=100,  # defaults to 100\n",
+    "    filter_score_with=2,  # defaults to None(means all score)\n",
+    ")"
    ]
   },
   {
